--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Présentation - My SmartTeams</title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon.png">
     <link rel="stylesheet" href="presentation.css">
     <link rel="stylesheet" href="../accueil/stylesIndex.css">
 </head>
@@ -14,13 +15,13 @@
     </header>
     <header class="presentation-header">
         <div class="logo-container">
-            <img src="logo-placeholder.png" alt="Logo de My SmartTeams" class="logo">
+            <img src="../images/favicon.png" alt="Logo de My SmartTeams" class="logo">
             <h1>My SmartTeams</h1>
         </div>
     </header>
 
     <div class="menu" id="menu">
-        <a href="index.html">Accueil</a>
+        <a href="../accueil/index.html">Accueil</a>
         <a href="../presentation/presentation.html">Présentation</a>
         <a href="#">Forum</a>
         <a href="../profil/profil.html">Mon Profil</a>
