--- a/profil/profil.html
+++ b/profil/profil.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon Profil - My SmartTeams</title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon.png">
     <link rel="stylesheet" href="profil.css">
     <link rel="stylesheet" href="../accueil/stylesIndex.css">
 </head>
@@ -14,8 +15,8 @@
     <div class="profile-container">
         <h1>Déjà de la <a style="color: #d9524a;">Teams</a> ?</h1>
         <p>Si non inscrivez-vous !</p>
-        <button class="signup-button">Inscription</button>
-        <button class="login-button">Connexion</button>
+        <a href="../inscription/inscription.html"><button class="signup-button">Inscription</button></a>
+        <a href="../connexion/connexion.html"><button class="login-button">Connexion</button></a>
     </div>
 
 </body>
