--- a/profil/profil.html
+++ b/profil/profil.html
@@ -15,7 +15,7 @@
     <div class="profile-container">
         <h1>Déjà de la <a style="color: #d9524a;">Teams</a> ?</h1>
         <p>Si non inscrivez-vous !</p>
-        <a href="../inscription/inscription.html"><button class="signup-button">Inscription</button></a>
+        <a href="../inscription/inscription.php"><button class="signup-button">Inscription</button></a>
         <a href="../connexion/connexion.html"><button class="login-button">Connexion</button></a>
     </div>
 
