--- a/inscription/inscription.html
+++ b/inscription/inscription.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inscription - My SmartTeams</title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon.png">
     <link rel="stylesheet" href="inscription.css">
     <link rel="stylesheet" href="../accueil/stylesIndex.css">
 </head>
