--- a/connexion/connexion.html
+++ b/connexion/connexion.html
@@ -28,7 +28,7 @@
 </body>
 <script>
     function goBack() {
-        window.history.back(); 
+        window.location.href = '../profil/profil.php'; 
     }
 </script>
 </html>
