--- a/inscription/inscription.html
+++ b/inscription/inscription.html
@@ -35,9 +35,19 @@
             <div class="form-group">
                 <label for="status">Statut :</label>
                 <select id="status" name="status" required>
-                    <option value="nouveau">Nouveau élève</option>
-                    <option value="ancien">Ancien élève</option>
+                    <option value="Nouvel étudiant">Nouvel étudiant</option>
+                    <option value="Ancien étudiant">Ancien étudiant</option>
                 </select>
+            </div>
+
+            <div class="form-group">
+                <label for="formation">Formation :</label>
+                <input type="text" id="formation" name="formation" required>
+            </div>
+
+            <div class="form-group">
+                <label for="ville">Ville :</label>
+                <input type="text" id="ville" name="ville" required>
             </div>
 
             <div class="form-group">
